--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,35 @@
 body {
   font-family: 'Roboto', 'serif';
 }
+
+.flex-container {
+  display: flex;
+  min-height: 100vh;
+}
+
+.sb {
+  min-width: 40vw;
+  background: url(/images/snow-landscape.jpg) no-repeat;
+  background-size: cover;
+}
+
+.img-overlay {
+  position: absolute;
+  top: 20%;
+  width: 40vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
+#santa {
+  width: 100px;
+  filter: invert(99%) sepia(99%) saturate(0%) hue-rotate(300deg) brightness(101%) contrast(105%);
+}
+
+#brand {
+  font-size: 4rem;
+  color: white;
+}
+
