--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,14 @@ body {
 
 main {
   background-color: azure;
+  width: 100vw;
+  height: 100vh;
 }
 
-.main-container {
-  margin: 180px 100px 30px 60px;
+.text-container {
+  margin: 180px 0 30px 60px;
+  padding-right: 100px;
+  width: 700px;
 }
 
 .bold {
@@ -59,9 +63,54 @@ br {
 }
 
 .form-container {
-  margin: 35px 0;
+  margin: 70px 0 30px 0;
   padding: 20px 100px 20px 60px;
-  box-shadow: 5px 8px 20px #000;
-  background-color: rgb(247, 255, 255);
+  box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.15);
+}
+
+form {
+  display: grid;
+  max-width: 600px;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 30px;
+}
+
+input {
+  width: 250px;
+  height: 30px;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.btm-text {
+  margin-left: 60px;
+}
+
+.btn {
+  border: none;
+  width: 250px;
+  height: 45px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  box-shadow: 1px 5px 10px rgb(0, 0, 0, 0.4);
+  background-color: #113f46;
+  color: white;
+}
+
+.btm-text p {
+  margin-top: 30px;
+  font-size: 1.2rem;
+}
+
+.btm-text a {
+  text-decoration: none;
+  color: #113f46;
+  font-weight: bold;
 }
 
